[metadata]
name = sb_live_view 
version = 0.0.1
author = "Will Dickson" 
author_email = will@iorodeo.com
url = https://github.com/iorodeo/sb_live_view 
description=A simple live viewer for OceanOptics spectrometers
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sb_live_view, spectrometer
license = MIT 
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = True
install_requires =
    numpy >= 1.23.3
    matplotlib >= 3.0.0 
    seabreeze >= 2.0.0
    PyQt5 >= 5.15.7

[options.entry_points]
console_scripts = 
    my-example-utility = example.example_module:main
    sb-live-view = sb_live_view.live_view:main


